k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-backend
  namespace: autoelite

spec:
  selector:
    app: car-backend

  type: ClusterIP

  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
